fix-table-filter text in dark mode

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -1820,6 +1820,10 @@ input:focus-visible {
     color: #fff;
   }
 
+  .text-muted {
+     color: #fff !important;
+  }
+
   .left-sidebar .active {
     background: #333c48;
   }
